Added easy project building and fixed a few compilation errors.